# tradingbot

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
